tests/invalid/type_mismatch/main.py
x: int = 5
y: float = x
